--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "sistema-cliente-vendas",
+  "name": "professor-gpt",
   "version": "0.1.0",
   "private": true,
   "scripts": {
@@ -48,6 +48,7 @@
     "react-hook-form": "^7.44.3",
     "react-leaflet": "^4.2.0",
     "react-speech": "^1.0.2",
+    "react-speech-kit": "^3.0.1",
     "react-speech-recognition": "^3.10.0",
     "react-text-to-speech": "^0.4.1",
     "regenerator-runtime": "^0.13.11",
